Add Cart context. Add Cart icon/dropdown in navigation.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 20px 40px;
     font-family: 'Saira Condensed', sans-serif;
     font-size: 1.25em;
     -webkit-font-smoothing: antialiased;
